--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive center-cropped" width="100" height="100" style="border-radius: 50%" src="img/profile.jpg" alt="">
+                    <img class="img-responsive center-cropped" style="border-radius: 50% ;width:170px; height:190px" src="img/profile.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
@@ -13,3 +13,4 @@
             </div>
         </div>
     </header>
+    
